<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="5dp"
    app:cardElevation="50dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="70dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="-10dp"
            android:src="@drawable/shadow_bottom_bar"/>

        <FrameLayout
            android:id="@+id/todoIcon"
            android:layout_width="101dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:onClick="setOnClickGoToDo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/todoIMG"
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_todo"/>

            <TextView
                android:id="@+id/todoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_bar_todo"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:layout_marginStart="37dp"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/dinoIcon"
            android:layout_width="101dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:onClick="setOnClickGoDino"
            app:layout_constraintStart_toEndOf="@id/todoIcon"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/dinoIMG"
                android:layout_width="102dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_dino" />

            <TextView
                android:id="@+id/dinoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_bar_dino"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:layout_marginStart="35dp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/friendIcon"
            android:layout_width="101dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:onClick="setOnClickGoFriend"
            app:layout_constraintStart_toEndOf="@id/dinoIcon"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_friend"/>

            <TextView
                android:id="@+id/friendText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_bar_friend"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:layout_marginStart="40dp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/mypageIcon"
            android:layout_width="101dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:onClick="setOnClickGoMypage"
            app:layout_constraintStart_toEndOf="@id/friendIcon"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="102dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_mypage" />

            <TextView
                android:id="@+id/mypageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_bar_mypage"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>